--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
                     alt=""
                   />
                   <h3>Belinda Jennings</h3>
-                  <h4>Mum Cenetral</h4>
+                  <h4>Mum Central</h4>
                 </div>
               </div>
               <!-- End testimonial item -->
