add title, description and keywords

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Index - iPortfolio Bootstrap Template</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <title>Homepage - Doni.K</title>
+    <meta content="Doni Kuntoro is a web developer, drummer and freelancer" name="description" />
+    <meta content="portofolio, web developer, fullstack engineer, wordpress, plugins, themes" name="keywords" />
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
