add preview folder for KLY

--- a/preview/liputan6.com/photo-pages.html
+++ b/preview/liputan6.com/photo-pages.html
@@ -4954,7 +4954,7 @@
         </script>
         <script async src="//adserver.kl-youniverse.com/asyncjs.php"></script>
         <script async src="//securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-        <script async src="https://cdns.klimg.com/d.kapanlaginetwork.com/banner/asset/prebid/adapter.js?cb=b82fc9a0"></script>
+        <script async src="//d.kapanlaginetwork.com/banner/asset/prebid/adapter.js?cb=b82fc9a0"></script>
         <!-- start GPT -->
         <script type="module">
             import {initializeApp} from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
@@ -5107,7 +5107,7 @@
                     buttonCloseBframeClick.setAttribute("onclick", "document.querySelector('.banner.banner--bottomframe').style.display='none'; return false;");
                     buttonCloseBframeClick.setAttribute("style", "width: 20px; position: absolute; margin-left: 150px; top: -20px; z-index: 99999;");
                     let buttonCloseBframeImg = document.createElement("img");
-                    buttonCloseBframeImg.setAttribute("src", "https://cdns.klimg.com/d.kapanlaginetwork.com/banner/preview/2019/08/20/close.png");
+                    buttonCloseBframeImg.setAttribute("src", "//d.kapanlaginetwork.com/banner/preview/2019/08/20/close.png");
                     buttonCloseBframeImg.setAttribute("style", "width: 20px; border: none;");
                     buttonCloseBframeClick.appendChild(buttonCloseBframeImg);
                     let checkBframeContainer = setInterval(function() {
@@ -7648,10 +7648,10 @@
                 </div>
             </div>
         </div>
-        <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/vendor/alpinejs-3.7.1.min.js" defer></script>
-        <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/vendor/smoothscroll-0.4.0.min.js" defer></script>
-        <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/vendor/lazysizes-5.3.2.min.js" async defer></script>
-        <script src="https://cdn-production-assets-kly.akamaized.net/assets/javascripts/vendor/swiper/swiper.min.js" defer></script>
+        <script src="/v5/js/m/vendor/alpinejs-3.7.1.min.js" defer></script>
+        <script src="/v5/js/m/vendor/smoothscroll-0.4.0.min.js" defer></script>
+        <script src="/v5/js/m/vendor/lazysizes-5.3.2.min.js" async defer></script>
+        <script src="/v5/js/m/vendor/swiper.min.js" defer></script>
         <script>
             document.addEventListener("DOMContentLoaded", function(event) {
                 const menuButton = document.getElementById('header-btn-menu');
@@ -8084,7 +8084,7 @@
         <!-- START KLY WIDGET -->
         <div id="div-gpt-ad-liputan6-widget"></div>
         <!-- END KLY WIDGET -->
-        <script type="text/javascript" src="https://cdn-production-assets-kly.akamaized.net/builds/mobile_neoliputan6.b9e115c2.js"></script>
+        <script type="text/javascript" src="/v5/js/m/vendor/mobile_neoliputan6.b9e115c2.js"></script>
         <script>
             function jsFCPInitializator() {
                 if (typeof mobile !== 'undefined') {
