add preview folder for KLY

--- a/preview/liputan6.com/photo-pages.html
+++ b/preview/liputan6.com/photo-pages.html
@@ -7648,10 +7648,10 @@
                 </div>
             </div>
         </div>
-        <script src="/v5/js/m/vendor/alpinejs-3.7.1.min.js" defer></script>
-        <script src="/v5/js/m/vendor/smoothscroll-0.4.0.min.js" defer></script>
-        <script src="/v5/js/m/vendor/lazysizes-5.3.2.min.js" async defer></script>
-        <script src="/v5/js/m/vendor/swiper.min.js" defer></script>
+        <script src="/asset/alpinejs-3.7.1.min.js" defer></script>
+        <script src="/asset/smoothscroll-0.4.0.min.js" defer></script>
+        <script src="/asset/lazysizes-5.3.2.min.js" async defer></script>
+        <script src="/asset/swiper.min.js" defer></script>
         <script>
             document.addEventListener("DOMContentLoaded", function(event) {
                 const menuButton = document.getElementById('header-btn-menu');
@@ -8084,7 +8084,7 @@
         <!-- START KLY WIDGET -->
         <div id="div-gpt-ad-liputan6-widget"></div>
         <!-- END KLY WIDGET -->
-        <script type="text/javascript" src="/v5/js/m/vendor/mobile_neoliputan6.b9e115c2.js"></script>
+        <script type="text/javascript" src="/asset/mobile_neoliputan6.b9e115c2.js"></script>
         <script>
             function jsFCPInitializator() {
                 if (typeof mobile !== 'undefined') {
