--- a/preview/liputan6.com/sample.html
+++ b/preview/liputan6.com/sample.html
@@ -4,7 +4,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
       <style>
-            body {
+            html, body {
                 background: #F5F7FA;
                 overflow-x: hidden;
             }
