--- a/preview/kapanlagi.com/photo-pages.html
+++ b/preview/kapanlagi.com/photo-pages.html
@@ -6719,10 +6719,15 @@
         <div id="div-gpt-ad-kapanlagi-widget"></div>
         <!-- END KLY WIDGET -->
         <!-- Bottom External-Source Script -->
-        <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/vendor/alpinejs-3.7.1.min.js" defer></script>
+        <!-- <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/vendor/alpinejs-3.7.1.min.js" defer></script>
         <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/vendor/smoothscroll-0.4.0.min.js" defer></script>
         <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/vendor/lazysizes-5.3.2.min.js" async defer></script>
-        <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/1.c/langtext.js" async defer></script>
+        <script src="https://cdns.klimg.com/a.kapanlagi.com/v5/js/m/1.c/langtext.js" async defer></script> -->
+
+        <script src="../liputan6.com/asset/alpinejs-3.7.1.min.js" defer></script>
+        <script src="../liputan6.com/asset/smoothscroll-0.4.0.min.js" defer></script>
+        <script src="../liputan6.com/asset/lazysizes-5.3.2.min.js" async defer></script>
+        <script src="../liputan6.com/asset/swiper.min.js" defer></script>
         <!-- Endof Bottom External-Source Script -->
         <!-- Bottom Inline Script -->
         <!-- -->
